kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-deployment
  labels:
    app: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce
  template:
    metadata:
      labels:
        app: ecommerce
    spec:
      containers:
      - name: ecommerce-app
        image: kris1992/progetto-ecommerce:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5   # Aspetta 5 secondi dopo l'avvio del container
          periodSeconds: 10        # Controlla ogni 10 secondi
          timeoutSeconds: 2        # Tempo massimo di attesa risposta

        # --- CONTROLLO DI VITALITÀ ---
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15  # Aspetta 15 secondi prima di iniziare i controlli
          periodSeconds: 20        # Controlla ogni 20 secondi
          failureThreshold: 3      # Se fallisce 3 volte consecutive, riavvia il Pod
