kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-service
spec:
  type: NodePort  # Tipo di servizio ideale per accedere da locale con Minikube
  selector:
    app: ecommerce # Collega il Service ai Pod con label 'app: ecommerce'
  ports:
    - protocol: TCP
      port: 80          # Porta interna del Service
      targetPort: 80    # Porta del container su cui risponde l'e-commerce
      nodePort: 30080   # Porta aperta sul cluster Minikube (range 30000-32767)
